Fix z-index welcome class to greater than in game object z-index

--- a/public/styles.css
+++ b/public/styles.css
@@ -14,7 +14,7 @@ body {
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.7);
-  z-index: 2;
+  z-index: 99999;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -133,7 +133,6 @@ body {
 .score .your-score {
   color: brown;
   font-size: medium;
-
 }
 
 .fence {
